--- a/styles/dark-theme.css
+++ b/styles/dark-theme.css
@@ -14,42 +14,31 @@ input[type="file"] {
   gap: 1rem;
 }
 
-#fileColumns > div {
+#fileColumns>div {
   flex: 1;
   border: 1px solid #ccc;
-  padding: 0.5rem;
-  max-height: 300px;
+  padding: 1rem;
+  height: 300px;
   overflow-y: auto;
   list-style-type: none;
-  padding-left: 0;
+  flex-direction: column; /* One row per icon/input pair */
 }
 
-/* Style list items inside all columns */
-#fileColumns li {
-  cursor: pointer;
-  padding: 5px;
-  border-bottom: 1px solid #333;
+#generalList>div {
+  display: flex;
+  align-items: center; /* Vertically center text/input with image */
+  gap: 8px;
 }
 
-#fileColumns li:hover {
-  background-color: #333;
-  color: #fff;
+#fileColumns img {
+  width: 24px;
+  height: 24px;
 }
 
-.json-viewer {
-  background-color: #2d2d2d;
-  color: #d4d4d4;
-  padding: 10px;
-  border-radius: 8px;
-  font-family: monospace;
-}
-
-.json-viewer .json-viewer-key {
-  color: #9cdcfe;
-}
-.json-viewer .json-viewer-value-string {
-  color: #ce9178;
-}
-.json-viewer .json-viewer-value-number {
-  color: #b5cea8;
+#fileColumns>div>input[type="number"] {
+  max-width: 150px;
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  border-bottom: 1px solid #ccc;
 }
